mvp styles for navbar

--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,10 @@
       <h1>Climbing the Mountai<span ng-click="makePost()">n</span></h1>
       <nav id="mainNav">
         <ul>
-          <li class="active" id="home"><a ui-sref="/home" title="home">Home</a></li>
-          <li id="about"><a ui-sref="/about" title="about">About</a></li>
-          <li id="proj"><a ui-sref="/projects" title="projects">Projects</a></li>
-          <li id="contact"><a ui-sref="/contact" title="contact">Contact</a></li>
+          <li><a class="active" ui-sref="/home" title="home" id="home">Home</a></li>
+          <li><a ui-sref="/about" title="about" id="about">About</a></li>
+          <li><a ui-sref="/projects" title="projects" id="proj">Projects</a></li>
+          <li><a ui-sref="/contact" title="contact" id="contact">Contact</a></li>
         </ul>
       </nav>
     </header>
