--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/master.css">
-    <link href="https://fonts.googleapis.com/css?family=Bungee+Outline" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Outline" rel="stylesheet"><link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Sintony:400,700|Titillium+Web" rel="stylesheet">
   </head>
   <body ng-controller="ctrl">
     <header id="mainHeader">
