Misc contactPage form improvements

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/master.css">
-    <link href="https://fonts.googleapis.com/css?family=Bungee+Outline" rel="stylesheet"><link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Sintony:400,700|Titillium+Web" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Outline" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Sintony:400,700|Titillium+Web" rel="stylesheet">
   </head>
   <body ng-controller="ctrl">
     <header id="mainHeader">
@@ -26,6 +27,8 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js"></script>
     <!-- jquery Cdn-->
     <script src="http://code.jquery.com/jquery-3.1.0.min.js"></script>
+    <!--jquery-form-validator-->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script>
     <!-- Angular files-->
     <script type="text/javascript" src="./js/angular/app.js"></script>
     <script type="text/javascript" src="./js/angular/ctrl.js"></script>
