--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/master.css">
     <link href="https://fonts.googleapis.com/css?family=Bungee+Outline" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Sintony:400,700|Titillium+Web" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|VT323" rel="stylesheet">
   </head>
   <body ng-controller="ctrl">
     <header id="mainHeader">
