refined styles for about/aboutMe nav

--- a/public/index.html
+++ b/public/index.html
@@ -36,5 +36,7 @@
     <script type="text/javascript" src="./js/angular/srvc.js"></script>
     <!-- Personal etc js-->
     <script type="text/javascript" src="./js/script.js"></script>
+    <!--fontAwesome-->
+    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"></script>
   </body>
 </html>
