added pics for skills & colorpallet redone

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Bungee+Outline" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Sintony:400,700|Titillium+Web" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|VT323" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
   </head>
   <body ng-controller="ctrl">
     <header id="mainHeader">
@@ -36,7 +37,5 @@
     <script type="text/javascript" src="./js/angular/srvc.js"></script>
     <!-- Personal etc js-->
     <script type="text/javascript" src="./js/script.js"></script>
-    <!--fontAwesome-->
-    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"></script>
   </body>
 </html>
