--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|VT323" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
   </head>
-  <body ng-controller="ctrl">
+  <body>
     <header id="mainHeader">
       <h1>Climbing the Mountai<span ng-click="makePost()">n</span></h1>
       <nav id="mainNav">
