--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Sintony:400,700|Titillium+Web" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|VT323" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-    <link href="./css/tingle.css">
+    <link rel="stylesheet" href="css/animate.css">
   </head>
   <body ng-controller="ctrl">
     <header id="mainHeader">
@@ -24,8 +24,6 @@
       </nav>
     </header>
     <ui-view></ui-view>
-    <!--tingle-->
-    <script type="text/javascript" src="./js/tingle.js"></script>
     <!-- Angular Cdn-->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <!-- Ui-router Cdn-->
@@ -40,5 +38,7 @@
     <script type="text/javascript" src="./js/angular/srvc.js"></script>
     <!-- Personal etc js-->
     <script type="text/javascript" src="./js/script.js"></script>
+    <!--wow.js-->
+    <script type="text/javascript" src="./js/wow.js"></script>
   </body>
 </html>
