added build folder and minified js files

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/master.css">
-    <link href="https://fonts.googleapis.com/css?family=Bungee+Outline" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Sintony:400,700|Titillium+Web" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|VT323" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/animate.css">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Julius+Sans+One|Open+Sans+Condensed:300|Patrick+Hand+SC|Roboto+Condensed|Sintony|Titillium+Web|Walter+Turncoat" rel="stylesheet">
   </head>
   <body ng-controller="ctrl">
     <header id="mainHeader">
@@ -30,15 +26,13 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js"></script>
     <!-- jquery Cdn-->
     <script src="http://code.jquery.com/jquery-3.1.0.min.js"></script>
-    <!--jquery-form-validator-->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script>
     <!-- Angular files-->
     <script type="text/javascript" src="./js/angular/app.js"></script>
     <script type="text/javascript" src="./js/angular/ctrl.js"></script>
     <script type="text/javascript" src="./js/angular/srvc.js"></script>
     <!-- Personal etc js-->
-    <script type="text/javascript" src="./js/script.js"></script>
+    <script type="text/javascript" src="./build/script.min.js"></script>
     <!--wow.js-->
-    <script type="text/javascript" src="./js/wow.js"></script>
+    <script type="text/javascript" src="./build/wow.min.js"></script>
   </body>
 </html>
